<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/session_list"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_more"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="650dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/button_detail"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:baselineAligned="true"
        android:text="@string/detail"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toEndOf="@+id/button_detail"
        android:baselineAligned="true"
        android:text="@string/delete"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="6dp"
        android:layout_toEndOf="@+id/button_delete"
        android:baselineAligned="true"
        android:text="@string/profile"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textview_total_score"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="65dp"
        android:text="@string/sum_of_scores"
        android:textSize="18sp" />


</RelativeLayout>



